# teledeteccion

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  skills-lock.json
.claude/skills/: cli-anything-qgis  geospatial-data-pipeline  geospatial-python-libraries  google-earth-engine-best-practices  python-google-style-guide
00-Curso/: Plan_Curso_Teledeteccion_MiguelPolo_1.docx  Teledetección.docx  evaluacion_v2.md  falso_color.js  sesion1_base_conocimiento.md  sesion2_base_conocimiento.md
Clase/Clase-05-Descarga_MODIS/: 5-DescargarImagenesModisfromPythonCOLAB.ipynb
Clase/Clase-06-Fusion_Sentinel_MODIS/: 6-DescargarImagFusionSentModisSerieTEmporalCOLAB.ipynb
Clase/Clase-09-Clasificador_Supervisado/: 9-GeneradorAleatorioImagen5Bandas.ipynb
Clase/Clase-11-Carga_Imagenes_Drones/: 11-CARGAR_IMAGENES_DRONES.ipynb
Clase/Clase-14-Clasificacion_Imagenes_Activas/: 14-ClasificaciónImagenesActivasCOLAB.ipynb
Clase/Clase-16-Clasificacion_SVC_RF_y_Generador/: 16-GeneradorImagenesActivasVVyVH.ipynb
Clase/Clase-17-XGBoost_y_Generador_Muestras/: 17-GeneradorImagenesActivasMUESTRASVVyVH.ipynb
articulos/: articulo_1_ndvi_multitemporal.md  articulo_2_humedad_dosel_moniliasis.md  articulo_3_fusion_S1_S2_cambio_cobertura.md  articulo_4_ahp_zonificacion_riesgo.md
code/: 01_gee_ndvi_series.js  02_analisis_mann_kendall.py  03_clasificacion_ramdom_forest.js  04_matriz_transicion.py  README.md  pasos_articulo.md  requirements.txt
extras/: Código_sugerido_turipaná.ipynb  propuestas_articulos.md
referencia/: README.md
sesiones/: prompt.md
(+86 files in other folders)
